Refactor Led class and Startup Task

--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -95,6 +95,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Dht11.cs" />
     <Compile Include="ISensor.cs" />
     <Compile Include="Led.cs" />
     <Compile Include="StartupTask.cs" />
