Change Interface from ISensor to IGpioComponents

--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -96,7 +96,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Dht11.cs" />
-    <Compile Include="ISensor.cs" />
+    <Compile Include="IGpioComponents.cs" />
     <Compile Include="Led.cs" />
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
