--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -137,24 +137,21 @@
     <PackageReference Include="Dht">
       <Version>1.0.1</Version>
     </PackageReference>
-    <PackageReference Include="EnterpriseLibrary.TransientFaultHandling">
-      <Version>6.0.1304</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.Devices.Client">
-      <Version>1.18.1</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
-    <PackageReference Include="PCLCrypto">
-      <Version>2.0.147</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sting.Cloud\Sting.Cloud.csproj">
+      <Project>{1fe56536-3b86-474f-9b81-1bb0525171d8}</Project>
+      <Name>Sting.Cloud</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '15.0' ">
     <VisualStudioVersion>15.0</VisualStudioVersion>
