--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,8 +3,7 @@
 # Add steps that test and distribute the app, save build artifacts, and more:
 # https://aka.ms/yaml
 
-pool:
-  vmImage: 'VS2017-Win2016'
+pool: 'Default'
 
 variables:
   solution: '**/*.sln'
