--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -96,10 +96,10 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="External Libraries\BMP180.cs" />
-    <Compile Include="Dht11.cs" />
+    <Compile Include="External Libraries\BMP180ext.cs" />
+    <Compile Include="Components\Dht11.cs" />
     <Compile Include="IGpioComponent.cs" />
-    <Compile Include="Led.cs" />
+    <Compile Include="Components\Led.cs" />
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelemetryData.cs" />
