Add Bmp180 class

--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -96,6 +96,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Components\Bmp180.cs" />
     <Compile Include="External Libraries\BMP180ext.cs" />
     <Compile Include="Components\Dht11.cs" />
     <Compile Include="IGpioComponent.cs" />
