--- a/StingApp/package.json
+++ b/StingApp/package.json
@@ -24,7 +24,10 @@
     "azure-iot-device": "^1.8.1",
     "azure-iot-device-mqtt": "^1.8.1",
     "azure-iothub": "^1.8.1",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
