--- a/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
+++ b/src/Sting.Measurements/Sting.Measurements/Sting.Measurements.csproj
@@ -101,7 +101,7 @@
     <Compile Include="Components\Lcd.cs" />
     <Compile Include="External Libraries\BMP180ext.cs" />
     <Compile Include="Components\Dht11.cs" />
-    <Compile Include="External Libraries\display.cs" />
+    <Compile Include="External Libraries\Display.cs" />
     <Compile Include="IGpioComponent.cs" />
     <Compile Include="Components\Led.cs" />
     <Compile Include="ISensor.cs" />
