--- a/StingApp/package.json
+++ b/StingApp/package.json
@@ -25,6 +25,7 @@
     "azure-iot-device-mqtt": "^1.8.1",
     "azure-iothub": "^1.8.1",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
