--- a/StingBackend/Backend/package.json
+++ b/StingBackend/Backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@azure/event-hubs": "^1.0.7",
+    "azure-iothub": "^1.8.2",
     "azure-storage": "^2.10.2",
     "cors": "^2.8.5",
     "debug": "^2.2.0",
