--- a/StingRaspi/src/Sting/Sting.Measurements/Sting.Measurements.csproj
+++ b/StingRaspi/src/Sting/Sting.Measurements/Sting.Measurements.csproj
@@ -102,12 +102,9 @@
     <Compile Include="External Libraries\BMP180ext.cs" />
     <Compile Include="Components\Dht11.cs" />
     <Compile Include="External Libraries\Display.cs" />
-    <Compile Include="IGpioComponent.cs" />
     <Compile Include="Components\Led.cs" />
-    <Compile Include="ISensor.cs" />
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TelemetryData.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -148,12 +145,19 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.9</Version>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>11.0.2</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sting.Measurements.Contracts\Sting.Measurements.Contracts.csproj">
+      <Project>{36c7101d-6919-4bd2-851c-86ccf9134f0a}</Project>
+      <Name>Sting.Measurements.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
+      <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
+      <Name>Sting.Units</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '15.0' ">
     <VisualStudioVersion>15.0</VisualStudioVersion>
