--- a/StingRaspi/src/Sting/Sting.Measurements/Sting.Measurements.csproj
+++ b/StingRaspi/src/Sting/Sting.Measurements/Sting.Measurements.csproj
@@ -154,6 +154,10 @@
       <Project>{36c7101d-6919-4bd2-851c-86ccf9134f0a}</Project>
       <Name>Sting.Measurements.Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Sting.Storage\Sting.Storage.csproj">
+      <Project>{9b15631e-9ae6-439f-84a5-3c9116ec86db}</Project>
+      <Name>Sting.Storage</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
       <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
       <Name>Sting.Units</Name>
