--- a/StingRaspi/src/Sting/Sting.Units/Sting.Units.csproj
+++ b/StingRaspi/src/Sting/Sting.Units/Sting.Units.csproj
@@ -120,6 +120,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="BMP180Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelemetryData.cs" />
     <EmbeddedResource Include="Properties\Sting.Units.rd.xml" />
