--- a/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
+++ b/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
@@ -123,15 +123,17 @@
     <Compile Include="Bmp180.cs" />
     <Compile Include="Buzzer.cs" />
     <Compile Include="Dht11.cs" />
+    <Compile Include="External Libraries\BMP180ext.cs" />
+    <Compile Include="External Libraries\Display.cs" />
     <Compile Include="Lcd.cs" />
     <Compile Include="Led.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Sting.Devices.rd.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Sting.Measurements.Contracts\Sting.Measurements.Contracts.csproj">
-      <Project>{36c7101d-6919-4bd2-851c-86ccf9134f0a}</Project>
-      <Name>Sting.Measurements.Contracts</Name>
+    <ProjectReference Include="..\Sting.Devices.Contracts\Sting.Devices.Contracts.csproj">
+      <Project>{569763f0-02f5-4d8d-b360-2a965d50fc77}</Project>
+      <Name>Sting.Devices.Contracts</Name>
     </ProjectReference>
     <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
       <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
