--- a/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
+++ b/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
@@ -129,9 +129,17 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Sting.Devices\Sting.Devices.csproj">
+      <Project>{cde8118a-222e-477c-a07e-8f475ffa5c97}</Project>
+      <Name>Sting.Devices</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sting.Storage\Sting.Storage.csproj">
       <Project>{9b15631e-9ae6-439f-84a5-3c9116ec86db}</Project>
       <Name>Sting.Storage</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
+      <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
+      <Name>Sting.Units</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
