Make sensors use TelemetryData as return value, more refactoring

--- a/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
+++ b/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
@@ -140,6 +140,11 @@
       <Name>Sting.Units</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Dht">
+      <Version>1.0.1</Version>
+    </PackageReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
