Add configuration file

--- a/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
+++ b/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
@@ -105,6 +105,7 @@
     <None Include="Sting.Application_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AppConfiguration.xml" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png">
       <InProject>false</InProject>
