--- a/StingRaspi/src/Sting/Sting.Storage/Sting.Storage.csproj
+++ b/StingRaspi/src/Sting/Sting.Storage/Sting.Storage.csproj
@@ -132,6 +132,12 @@
       <Version>2.7.3</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
+      <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
+      <Name>Sting.Units</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
