--- a/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
+++ b/StingRaspi/src/Sting/Sting.Devices/Sting.Devices.csproj
@@ -123,10 +123,10 @@
     <Compile Include="Bmp180.cs" />
     <Compile Include="Buzzer.cs" />
     <Compile Include="Dht11.cs" />
-    <Compile Include="External Libraries\BMP180ext.cs" />
     <Compile Include="External Libraries\Display.cs" />
     <Compile Include="Lcd.cs" />
     <Compile Include="Led.cs" />
+    <Compile Include="Mfrc522.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Sting.Devices.rd.xml" />
   </ItemGroup>
