--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -9,11 +9,19 @@
   "author": {
     "name": ""
   },
+  "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.15.0",
     "debug": "^2.2.0",
     "express": "^4.14.0",
-    "morgan": "^1.7.0",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-rc.3",
+    "typescript": "^3.3.3333"
+  },
+  "devDependencies": {
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.0.37",
+    "@types/express-serve-static-core": "^4.0.50",
+    "@types/mime": "^1.3.1",
+    "@types/serve-static": "^1.7.32",
+    "@types/node": "^8.0.14"
   }
 }
