--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -11,7 +11,6 @@
   },
   "main": "app.js",
   "dependencies": {
-    "debug": "^2.2.0",
     "express": "^4.14.0",
     "pug": "^2.0.0-rc.3",
     "typescript": "^3.3.3333"
@@ -21,7 +20,8 @@
     "@types/express": "^4.0.37",
     "@types/express-serve-static-core": "^4.0.50",
     "@types/mime": "^1.3.1",
+    "@types/node": "^8.0.14",
     "@types/serve-static": "^1.7.32",
-    "@types/node": "^8.0.14"
+    "tslint": "^5.13.1"
   }
 }
