--- a/StingBackend/tsconfig.json
+++ b/StingBackend/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
     "module": "commonjs",
+    "esModuleInterop": true,
     "target": "es6",
-    "lib": ["es6"],
-    "sourceMap": true
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "lib": [ "es6" ]
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "src/scripts/**/*",
+    "app.ts"
   ]
 }
