--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app"
+    "start": "node app",
+    "dev": "nodemon index"
   },
   "description": "StingBackend",
   "author": {
@@ -22,6 +23,7 @@
     "@types/mime": "^1.3.1",
     "@types/node": "^8.0.14",
     "@types/serve-static": "^1.7.32",
+    "nodemon": "^1.18.10",
     "tslint": "^5.13.1"
   }
 }
