--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -8,12 +8,11 @@
   },
   "description": "StingBackend",
   "author": {
-    "name": ""
+    "name": "Robin Müller"
   },
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.14.0",
+    "express": "^4.16.4",
     "mongoose": "^5.4.19",
     "pug": "^2.0.0-rc.3"
   },
