--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^4.0.37",
     "@types/express-serve-static-core": "^4.0.50",
     "@types/mime": "^1.3.1",
+    "@types/mongoose": "^5.3.22",
     "@types/node": "^8.0.14",
     "@types/serve-static": "^1.7.32",
     "nodemon": "^1.18.10",
