--- a/StingBackend/package.json
+++ b/StingBackend/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "mongoose": "^5.4.19",
-    "pug": "^2.0.0-rc.3"
+    "pug": "^2.0.0-rc.3",
+    "typegoose": "^5.6.0"
   },
   "devDependencies": {
     "@types/debug": "0.0.30",
