--- a/StingBackend/tsconfig.json
+++ b/StingBackend/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
-    "lib": [ "es6" ]
+    "lib": [ "es6" ],
+    "experimentalDecorators": true,
   },
   "exclude": [
     "node_modules"
