Add TelemetryDataService and settings template

--- a/StingBackend/appsettings.json
+++ b/StingBackend/appsettings.json
@@ -1,8 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "ConnectionString": {
+    "StingMeasurements": ""
   },
-  "AllowedHosts": "*"
+  "Logging": {
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    }
+  }
 }
