Add Device route

--- a/StingBackend/StingBackend/appsettings.json
+++ b/StingBackend/StingBackend/appsettings.json
@@ -1,6 +1,9 @@
 {
   "ConnectionStrings": {
-    "StingMeasurements": ""
+    "StingDB": ""
+  },
+  "DatabaseInfo": {
+    "DatabaseName": "Sting"
   },
   "Logging": {
     "IncludeScopes": false,
