--- a/StingBackend/StingBackend/Sting.Backend.csproj
+++ b/StingBackend/StingBackend/Sting.Backend.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.8.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sting.Models\Sting.Models.csproj" />
+  </ItemGroup>
+
 </Project>
