--- a/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
+++ b/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
@@ -130,6 +130,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\StingBackend\Sting.Models\Sting.Models.csproj">
+      <Project>{e1044465-1895-43e9-b219-ab502a845e17}</Project>
+      <Name>Sting.Models</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Sting.Devices\Sting.Devices.csproj">
       <Project>{cde8118a-222e-477c-a07e-8f475ffa5c97}</Project>
       <Name>Sting.Devices</Name>
@@ -138,14 +142,10 @@
       <Project>{9b15631e-9ae6-439f-84a5-3c9116ec86db}</Project>
       <Name>Sting.Storage</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Sting.Units\Sting.Units.csproj">
-      <Project>{4d7b1de3-8078-440c-9c7c-be0490f7dcd1}</Project>
-      <Name>Sting.Units</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.9</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '15.0' ">
