--- a/StingRaspi/src/Sting/Sting.Controller/Sting.Controller.csproj
+++ b/StingRaspi/src/Sting/Sting.Controller/Sting.Controller.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\StingBackend\Sting.Models\Sting.Models.csproj" />
     <ProjectReference Include="..\Sting.Controller.Contracts\Sting.Controller.Contracts.csproj" />
     <ProjectReference Include="..\Sting.Devices.Contracts\Sting.Devices.Contracts.csproj" />
   </ItemGroup>
