Add ng-bootstrap, add component suffix to navbar

--- a/StingBackend/StingBackend/appsettings.json
+++ b/StingBackend/StingBackend/appsettings.json
@@ -1,21 +1,21 @@
 {
-  "ConnectionStrings": {
-    "StingDB": ""
-  },
-  "DatabaseInfo": {
-    "DatabaseName": "Sting"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    }
-  }
+"ConnectionStrings": {
+"StingDB": "mongodb+srv://Robin:dwmOuKWkDzctWPbza8jz@stingmeasurements-2u2yu.mongodb.net/test?retryWrites=true"
+},
+"DatabaseInfo": {
+"DatabaseName": "Sting"
+},
+"Logging": {
+"IncludeScopes": false,
+"Debug": {
+"LogLevel": {
+"Default": "Warning"
+}
+},
+"Console": {
+"LogLevel": {
+"Default": "Warning"
+}
+}
+}
 }
