--- a/StingRaspi/src/Sting/Sting.Controller/Sting.Controller.csproj
+++ b/StingRaspi/src/Sting/Sting.Controller/Sting.Controller.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\StingBackend\Sting.Models\Sting.Models.csproj" />
+    <ProjectReference Include="..\Sting.Core\Sting.Core.csproj" />
     <ProjectReference Include="..\Sting.Devices\Sting.Devices.csproj" />
   </ItemGroup>
 
