--- a/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
+++ b/StingRaspi/src/Sting/Sting.Application/Sting.Application.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <DepsFileGenerationMode>old</DepsFileGenerationMode>
   </PropertyGroup>
 
   <ItemGroup>
