Refactor Database class

--- a/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
+++ b/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
@@ -6,7 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Bme680Driver" Version="1.0.10" />
-    <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19319.5" />
+    <PackageReference Include="Iot.Device.Bindings" Version="0.1.0-prerelease.19326.2" />
+    <PackageReference Include="System.Device.Gpio" Version="0.1.0-prerelease.19326.2" />
   </ItemGroup>
 
   <ItemGroup>
