Another try at fixing github action

--- a/.github/workflows/netcore.yml
+++ b/.github/workflows/netcore.yml
@@ -3,7 +3,7 @@ name: Build & Test
 on: 
   push:
     paths:
-      - './src/Sting.Measurements/*'
+      - 'src/Sting.Measurements/**'
 
 jobs:
   build:
