--- a/.github/workflows/netcore.yml
+++ b/.github/workflows/netcore.yml
@@ -1,8 +1,9 @@
 name: Build & Test
 
-on: push
-    paths:
-      - 'src/Sting.Measurements/**'
+on: 
+    push:
+        paths:
+            - 'src/Sting.Measurements/**'
 
 jobs:
   build:
