--- a/.github/workflows/netcore.yml
+++ b/.github/workflows/netcore.yml
@@ -1,26 +1,43 @@
 name: Build & Test
 
-on: 
-    push:
-        paths:
-            - 'src/Sting.Measurements/**'
+on:
+  push
+# recursive paths are not working yet
+#    paths:
+#      - 'src/Sting.Measurements/**'
 
 jobs:
-  build:
 
+  Build-Raspi:
+    name: Build Raspberry Application
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.0.100-preview9-014004
-    - name: Build Sting.Application
-      run: dotnet build --configuration Release src/Sting.Measurements/Sting.Application
-    - name: Build Sting.Core
-      run: dotnet build --configuration Release src/Sting.Measurements/Sting.Core
-    - name: Build Sting.Devices
-      run: dotnet build --configuration Release src/Sting.Measurements/Sting.Devices
-    - name: Build Sting.Persistence
-      run: dotnet build --configuration Release src/Sting.Measurements/Sting.Persistence
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.0.100-preview9-014004
+      - name: Build Sting.Application
+        run: dotnet build --configuration Release src/Sting.Measurements/Sting.Application
+      - name: Build Sting.Core
+        run: dotnet build --configuration Release src/Sting.Measurements/Sting.Core
+      - name: Build Sting.Devices
+        run: dotnet build --configuration Release src/Sting.Measurements/Sting.Devices
+      - name: Build Sting.Persistence
+        run: dotnet build --configuration Release src/Sting.Measurements/Sting.Persistence
+
+  Build-Backend:
+    name: Build Backend
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.0.100-preview9-014004
+      - name: Build Sting.Backend
+        run: dotnet build --configuration Release src/Sting.Backend/Sting.Backend
+      - name: Build Sting.Models
+        run: dotnet build --configuration Release src/Sting.Backend/Sting.Models
