--- a/src/Sting.WebApp/package.json
+++ b/src/Sting.WebApp/package.json
@@ -26,6 +26,7 @@
     "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^3.2.1",
     "jquery": "^3.4.1",
+    "npm": "^6.11.3",
     "popper.js": "^1.15.0",
     "rxjs": "~6.5.3",
     "zone.js": "^0.10.2"
@@ -37,8 +38,8 @@
     "@angular/language-service": "^8.2.7",
     "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "~12.7.5",
-    "codelyzer": "~5.1.0",
+    "@types/node": "^12.7.7",
+    "codelyzer": "^5.1.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.3.0",
@@ -49,6 +50,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~8.4.1",
     "tslint": "~5.20.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.6.3"
   }
 }
