Fix SensorName not getting included in BsonObject

--- a/src/Sting.Measurements/Sting.Persistence/Sting.Persistence.csproj
+++ b/src/Sting.Measurements/Sting.Persistence/Sting.Persistence.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Sting.Backend\Sting.Models\Sting.Models.csproj" />
   </ItemGroup>
 
 </Project>
