--- a/src/Sting.WebApp/package.json
+++ b/src/Sting.WebApp/package.json
@@ -11,22 +11,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.11",
-    "@angular/common": "^8.2.11",
-    "@angular/compiler": "^8.2.11",
-    "@angular/core": "^8.2.11",
-    "@angular/forms": "^8.2.11",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^8.2.11",
-    "@angular/platform-browser-dynamic": "^8.2.11",
-    "@angular/router": "^8.2.11",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.9.1",
     "chartjs-plugin-annotation": "^0.5.7",
     "core-js": "^3.3.4",
     "jquery": "^3.4.1",
-    "npm": "^6.12.0",
+    "npm": "^6.13.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.3",
     "zone.js": "^0.10.2"
@@ -34,9 +34,9 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.15",
     "@angular/cli": "^8.3.15",
-    "@angular/compiler-cli": "^8.2.11",
+    "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.12",
-    "@types/jasmine": "^3.4.4",
+    "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.3",
     "codelyzer": "^5.2.0",
@@ -49,7 +49,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0",
+    "tslint": "^5.20.1",
     "typescript": "3.5.3"
   }
 }
