Implement dynamic configuration of database and registered devices

--- a/.gitignore
+++ b/.gitignore
@@ -437,4 +437,7 @@ typings/
 .fusebox/
 
 #DynamoDB Local files 
-.dynamodb/ 
+.dynamodb/
+
+# Project specific #
+/src/Sting.Measurements/Sting.Application/config.json
