--- a/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
+++ b/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.1.0-prerelease.20121.1" />
     <PackageReference Include="System.Device.Gpio" Version="1.1.0-prerelease.20121.1" />
   </ItemGroup>
 
