--- a/src/Sting.WebApp/package.json
+++ b/src/Sting.WebApp/package.json
@@ -29,6 +29,7 @@
     "npm": "^6.14.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
+    "tslib": "^1.11.1",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
