--- a/src/Sting.Backend/Sting.Backend/Sting.Backend.csproj
+++ b/src/Sting.Backend/Sting.Backend/Sting.Backend.csproj
@@ -11,15 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
     <PackageReference Include="MongoDB.Driver" Version="2.10.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sting.Models\Sting.Models.csproj" />
+    <ProjectReference Include="..\..\Sting.Measurements\Sting.Models\Sting.Models.csproj" />
   </ItemGroup>
 
 </Project>
