--- a/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
+++ b/src/Sting.Measurements/Sting.Devices/Sting.Devices.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Sting.Backend\Sting.Models\Sting.Models.csproj" />
+    <ProjectReference Include="..\Sting.Models\Sting.Models.csproj" />
   </ItemGroup>
 
 </Project>
