Implement basic grpc configuration method

--- a/src/Sting.Measurements/Sting.Communication/Sting.Communication.csproj
+++ b/src/Sting.Measurements/Sting.Communication/Sting.Communication.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Sting.Core\Sting.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Protobuf Include="Protos\Configurator.proto" />
   </ItemGroup>
 
