--- a/src/Sting.Measurements/Sting.Core/Sting.Core.csproj
+++ b/src/Sting.Measurements/Sting.Core/Sting.Core.csproj
@@ -5,8 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Communication\Protos\Configurator.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.11.4" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.27.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.27.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Sting.Devices\Sting.Devices.csproj" />
     <ProjectReference Include="..\Sting.Models\Sting.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Communication\Protos\Configurator.proto" />
   </ItemGroup>
 
 </Project>
